--- a/Main index/Blues Training/Lessen 14 tem 18.html
+++ b/Main index/Blues Training/Lessen 14 tem 18.html
@@ -18,7 +18,10 @@
         </nav>
     </Header>
     <main>
-        <h2>Lessen 14 t.e.m. 18</h2>
+        <section>
+
+            <h2>Lessen 14 t.e.m. 18</h2>
+        </section>
         <p>
             Les 14: 8 maten Blues
         </p>
