--- a/Main index/Blues Training/Lessen 9 tem 13.html
+++ b/Main index/Blues Training/Lessen 9 tem 13.html
@@ -18,7 +18,10 @@
         </nav>
     </Header>
     <main>
-        <h2>Lessen 9 t.e.m. 13</h2>
+        <section>
+
+            <h2>Lessen 9 t.e.m. 13</h2>
+        </section>
         <p>
             Les 9: Akkoordenstudie 6- en 2-
         </p>
