--- a/Main index/Blues Training/lessen 1 tem 4.html
+++ b/Main index/Blues Training/lessen 1 tem 4.html
@@ -18,7 +18,10 @@
         </nav>
     </Header>
     <main>
-        <h2>Lessen 1 t.e.m. 4</h2>
+        <section>
+
+            <h2>Lessen 1 t.e.m. 4</h2>
+        </section>
         <p>
             Les 1: Mozart’s Blues
         </p>
