--- a/Main index/Blues Training/lessen 5 tem 8.html
+++ b/Main index/Blues Training/lessen 5 tem 8.html
@@ -18,7 +18,10 @@
         </nav>
     </Header>
     <main>
-        <h2>Lessen 5 t.e.m. 8</h2>
+        <section>
+
+            <h2>Lessen 5 t.e.m. 8</h2>
+        </section>
         <p>
             Les 5: Akkoordenstudie 5D, 4D en 1D
         </p>
