--- a/Main index/eartraining/Melody Paths/Lessen 13 tem 16.html
+++ b/Main index/eartraining/Melody Paths/Lessen 13 tem 16.html
@@ -18,7 +18,10 @@
         </nav>
     </Header>
     <main>
-        <h2>Lessen 13 t.e.m. 16</h2>
+        <section>
+
+            <h2>Lessen 13 t.e.m. 16</h2>
+        </section>
         <p>
             Les 13: Akkoorden 2- en 6-
         </p>
