--- a/Main index/eartraining/Melody Paths/Lessen 17 tem 20.html
+++ b/Main index/eartraining/Melody Paths/Lessen 17 tem 20.html
@@ -18,7 +18,10 @@
         </nav>
     </Header>
     <main>
-        <h2>Lessen 17 t.e.m. 20</h2>
+        <section>
+
+            <h2>Lessen 17 t.e.m. 20</h2>
+        </section>
         <p>
             Les 17: Akkoorden 3- en 4
         </p>
