--- a/Main index/eartraining/Melody Paths/Lessen 5 tem 8.html
+++ b/Main index/eartraining/Melody Paths/Lessen 5 tem 8.html
@@ -17,7 +17,10 @@
         </nav>
     </Header>
     <main>
-        <h2>Lessen 5 t.e.m. 8</h2>
+        <section>
+
+            <h2>Lessen 5 t.e.m. 8</h2>
+        </section>
         <p>
             Les 5: Akkoorden 1, 4, 1 en 5D
         </p>
