--- a/Main index/eartraining/Tonal map/index.html
+++ b/Main index/eartraining/Tonal map/index.html
@@ -17,21 +17,34 @@
         </nav>
     </Header>
     <main>
-        <H2>Sing The Numbers</H2>
-        <p>Tonal Map</p>
-        <ul>
-            <li><a href="module 1.html">Module 1</a></li>
-            <li><a href="module 2.html">Module 2</a></li>
-            <li>
-                <a href="module 3.html">Module 3</a>
-            </li>
-            <li>
-                <a href="module 4.html">Module 4</a>
-            </li>
-            <Li>
-                <a href="module 5.html">Module 5</a>
-            </Li>
-        </ul>
+        <section>
+
+            <H2>Sing The Numbers</H2>
+        </section>
+        <section>
+
+            
+            
+            <a href="module 1.html style="style="text-decoration: none; color: #999; font-size: 20px;" >Module 1</a>
+        </section>
+
+
+        <section>
+
+            <a href="module 2.html"style="text-decoration: none; color: #999; font-size: 20px;" >Module 2</a>
+        </section>
+        <section>
+
+            <a href="module 3.html"style="text-decoration: none; color: #999; font-size: 20px;" >Module 3</a>
+        </section>
+        <section>
+
+            <a href="module 4.html" style="text-decoration: none; color: #999; font-size: 20px;">Module 4</a>
+        </section>
+        <section>
+
+            <a href="module 5.html" style="text-decoration: none; color: #999; font-size: 20px;">Module 5</a>
+        </section>
     </main>
 </body>
 </html>
