--- a/Main index/eartraining/Tonal map/module 2.html
+++ b/Main index/eartraining/Tonal map/module 2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <Header>
-        <h1>TONAL MAP/h1>
+        <h1>TONAL MAP</h1>
         <nav>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
@@ -18,8 +18,11 @@
         </nav>
     </Header>
     <main>
-        <h2>Module 2</h2>
-        <p>
+        <section>
+
+            <h2>Module 2</h2>
+        </section>
+            <p>
             Les 6.  We zingen nu de noten 1, 3 en 5 
         </p>
         <audio controls controlslist="nodownload" src="Audio/Module 2/IFR_Stn1_6.mp3"></audio>
