--- a/Main index/eartraining/Tonal map/module 3.html
+++ b/Main index/eartraining/Tonal map/module 3.html
@@ -18,7 +18,10 @@
         </nav>
     </Header>
     <main>
-        <h2>Module 3</h2>
+        <section>
+
+            <h2>Module 3</h2>
+        </section>
         <p>
             Les 10. We zingen nu de noten 1, 3, 5 en 6
         </p>
