--- a/Main index/eartraining/Tonal map/module 5.html
+++ b/Main index/eartraining/Tonal map/module 5.html
@@ -17,7 +17,10 @@
         </nav>
     </Header>
     <main>
-        <h2>Module 5</h2>
+        <section>
+
+            <h2>Module 5</h2>
+        </section>
         <p>
             Les 19. We zingen nu de noten  1, 2, 3, 4, 5, 6 en 7  
         </p>
