--- a/Main index/eartraining/Melody Paths/Lessen 9 tem 12.html
+++ b/Main index/eartraining/Melody Paths/Lessen 9 tem 12.html
@@ -18,7 +18,10 @@
         </nav>
     </Header>
     <main>
-        <h2>Lessen 9 t.e.m. 12</h2>
+        <section>
+
+            <h2>Lessen 9 t.e.m. 12</h2>
+        </section>
         <p>
             Les 9: Akkoorden 6- en 5D
         </p>
