--- a/Main index/eartraining/Seven Worlds/index.html
+++ b/Main index/eartraining/Seven Worlds/index.html
@@ -17,35 +17,44 @@
         </nav>
     </Header>
     <main>
-        <H2>Sing The Numbers</H2>
-        <p>Seven Worlds</p>
-        <ul>
-            <li><a href="De Eerste Harmonische Omgeving (Ionisch).html">De Eerste Harmonische Omgeving: Ionisch
-            </a></li>
-            <li>
-                <a href="De Tweede Harmonische Omgeving (Dorisch).html">De Tweede Harmonische Omgeving (Dorisch)
-                </a>
-            </li>
+        <section>
 
-            <li>
-                <a href="De Derde Harmonische Omgeving: Phrygisch.html">De Derde Harmonische Omgeving: Phrygisch</a>
-            </li>
-            <li>
-                <a href="De Vierde Harmonische Omgeving: Lydisch.html">De Vierde Harmonische Omgeving: Lydisch</a>
-            </li>
-            <Li>
-                <a href="De Vijfde Harmonische Omgeving: Mixolydisch.html">De Vijfde Harmonische Omgeving: Mixolydisch
-                </a>
-            </Li>
-            <li>
-                <a href="De Zesde Harmonische Omgeving: Aeolisch.html">De Zesde Harmonische Omgeving: Aeolisch
-                </a>
-            </li>
-            <li>
-                <a href="De Zevende Harmonische Omgeving: Locrisch.html">De Zevende Harmonische Omgeving: Locrisch
-                </a>
-            </li>
-        </ul>
+            <H2>Sing The Numbers</H2>
+        </section>
+        <section>
+
+            <a href="De Eerste Harmonische Omgeving (Ionisch).html" style="text-decoration: none; color: #999; font-size: 20px;">De Eerste Harmonische Omgeving: Ionisch
+            </a>
+        </section>
+        <section>
+
+            <a href="De Tweede Harmonische Omgeving (Dorisch).html" style="text-decoration: none; color: #999; font-size: 20px;" >De Tweede Harmonische Omgeving (Dorisch)
+            </a>
+        </section>
+        <section>
+
+            <a href="De Derde Harmonische Omgeving: Phrygisch.html" style="text-decoration: none; color: #999; font-size: 20px;">De Derde Harmonische Omgeving: Phrygisch</a>
+        </section>
+        <section>
+
+            <a href="De Vierde Harmonische Omgeving: Lydisch.html"style="text-decoration: none; color: #999; font-size: 20px;" >De Vierde Harmonische Omgeving: Lydisch</a>
+        </section>
+        <section>
+
+            <a href="De Vijfde Harmonische Omgeving: Mixolydisch.html"style="text-decoration: none; color: #999; font-size: 20px;" >De Vijfde Harmonische Omgeving: Mixolydisch
+            </a>
+        </section>
+        <section>
+
+            <a href="De Zesde Harmonische Omgeving: Aeolisch.html"style="text-decoration: none; color: #999; font-size: 20px;" >De Zesde Harmonische Omgeving: Aeolisch
+            </a>
+        </section>
+        <section>
+
+            <a href="De Zevende Harmonische Omgeving: Locrisch.html" style="text-decoration: none; color: #999; font-size: 20px;">De Zevende Harmonische Omgeving: Locrisch
+            </a>
+        </section>
+
     </main>
 </body>
 </html>
