--- a/Main index/eartraining/Tonal map/module 4.html
+++ b/Main index/eartraining/Tonal map/module 4.html
@@ -18,8 +18,11 @@
         </nav>
     </Header>
     <main>
-        <h2>Module 4</h2>
-        <p>
+        <section>
+
+            <h2>Module 4</h2>
+        </section>
+            <p>
             Les 14. We zingen nu de noten 7, 1, 2 en 3 
         </p>
         <audio controls controlslist="nodownload" src="Audio/Module 4/IFR_Stn1_14.mp3"></audio>
