--- a/Main index/eartraining/Tonal map/index.html
+++ b/Main index/eartraining/Tonal map/index.html
@@ -25,7 +25,7 @@
 
             
             
-            <a href="module 1.html style="style="text-decoration: none; color: #999; font-size: 20px;" >Module 1</a>
+            <a href="module 1.html"style="text-decoration: none; color: #999; font-size: 20px;" >Module 1</a>
         </section>
 
 
