--- a/Main index/eartraining/Melody Paths/index.html
+++ b/Main index/eartraining/Melody Paths/index.html
@@ -49,7 +49,7 @@
             <section>
 
                 
-                <p>Improvise For Real biedt meespeeltracks aan in alle toonaarden en verschilllnede muziekgenres <br> je kan ook zelf backtracks maken  in de app 'iReal Pro' en Hookpad (www.Hooktherory.com)</p>
+                <p>Improvise For Real biedt meespeeltracks aan in alle toonaarden en verschilllnede muziekgenres <br> je kan ook zelf backtracks maken  in de app 'iReal Pro' en Hookpad (www.hooktherory.com)</p>
             </section>
     </main>
 </body>
