--- a/Main index/eartraining/Tonal map/module 1b.html
+++ b/Main index/eartraining/Tonal map/module 1b.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tonal Map Module 1</title>
-    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/index.css">
+    <title>Tonal Map Module 1B</title>
+    <link rel="stylesheet body" href="/css/indexB.css">
 </head>
 <body>
     <Header>
-        <h1>TONAL MAP</h1>
+        <h1>TONAL MAPB</h1>
         <nav>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
                 <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
@@ -20,11 +20,10 @@
 
             <h2>Module 1</h2>
         </section>
-
-
             <p>
                 Les 1. Beheers de noten 1, 2, 3: zing de eerste 3 noten na van de tonale kaart. 
             </p>
+
                 <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn_1_1.mp3"></audio>
                 <p>
                 Les 2. Beheers de noten 1, 2, 3: nu maken we een melodische verbinding. Beginner
@@ -48,5 +47,8 @@
             <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_5.mp3"></audio>
 
         </main>
+        <footer>
+            
+        </footer>
 </body>
 </html>
