--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jpr Cursus</title>
-    <link rel="stylesheet body" href="index.css">
+    <link rel="stylesheet body" href="css/indexB.css">
     <script src="index.js"></script>
 </head>
 <body>
@@ -17,26 +17,24 @@
         </nav>
     </Header>
     <div class="wrapper">
-
         <main>
-            <section id = 'steezy'>
-
-                <p>
-                    Tell me and i forgot.
-                </p>
-                <p>
-                    Teach me and i may remember.
-                </p>
-                <p>
-                    Involve me and i learn.
-                </p>
-                <p>
-                    (Benjamin Franklin)
-                </p>
-            </section>
-            
+            <section>
+                <div class= "hoofdletters">
+                    <p>
+                        Tell me and i forgot.
+                    </p>
+                    <p>
+                        Teach me and i may remember.
+                    </p>
+                    <p>
+                        Involve me and i learn.
+                    </p>
+                    <p>
+                        (Benjamin Franklin)
+                    </p>
+                </div>
+            </section>  
         </main>
     </div>
-
 </body>
 </html>
