--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -26,7 +26,7 @@
     </section>
         <section>
             
-            <a href="Seven Worlds/index.html style=" style="text-decoration: none; color: #999; font-size: 20px;">Seven Worlds</a>
+            <a href="Seven Worlds/index.html" style="text-decoration: none; color: #999; font-size: 20px;">Seven Worlds</a>
         </section>
         <section>
             
