--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <section>
                 <div class= "hoofdletters">
                     <p>
-                        Tell me and i forgot.
+                        Tell me and i forget.
                     </p>
                     <p>
                         Teach me and i may remember.
