--- a/Versie sidebar/module 1.html
+++ b/Versie sidebar/module 1.html
@@ -52,7 +52,7 @@
                     expand_more
                     </span>
                 </div>   
-                <ul>
+                <ul class="sub_menu">
                     <li>
                         <a href="#">Melody Paths</a>
                         <a href="#">Seven Worlds</a>
