--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
                 <a href="Main index/eartraining/index.html">Ear Training</a>
                 <a href="Main index/Blues Training/index.html">Blues Training</a>
-                <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
+                <a href="https://integerbook.herokuapp.com">Leadsheets IFR</a>
         </nav>
     </Header>
     <div class="wrapper">
