--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <Header>
-        <h1>Cursus Jazz Pop Rock</h1>
+        <h1>Improvise For Real</h1>
         <nav>
                 <a href="Main index/eartraining/index.html">Ear Training</a>
                 <a href="Main index/Blues Training/index.html">Blues Training</a>
