--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ear Training</title>
-    <link rel="stylesheet body" href="Layout.css">
-    
-
+    <link rel="stylesheet" href="https://thomastooten.github.io/JPRSite/Layout.css">
 </head>
 <body>
     <header>
@@ -17,19 +15,30 @@
             <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
     </header>
-    <section>
-        <h2>Sing The Numbers</h2>
-    </section>
-    <div class="links-container">
+    <main>
         <section>
-            <a href="Tonal map/index.html" style="text-decoration: none; color: #999; font-size: 20px;">Tonal map</a>
+            <h2>Sing The Numbers</h2>
         </section>
-        <section>
-            <a href="Seven Worlds/index.html" style="text-decoration: none; color: #999; font-size: 20px;">Seven Worlds</a>
-        </section>
-        <section>
-            <a href="Melody Paths/index.html" style="text-decoration: none; color: #999; font-size: 20px;">Melody Paths</a>
-        </section>
-    </div>
+        <div class="links-container">
+            <section>
+                <a href="Tonal map/index.html" style="text-decoration: none; display: inline-block; text-align: center; padding: 10px; border: 1px solid #ccc; border-radius: 8px;">
+                    <img src="Afbeeldingen/Eartraining.png" alt="Tonal Map" height="200" width="200" style="display: block; margin: 0 auto;">
+                    <span style="display: block; color: #999; font-size: 20px; margin-top: 10px;">Tonal map</span>
+                </a>
+            </section>
+            <section>
+                <a href="Seven Worlds/index.html" style="text-decoration: none; display: inline-block; text-align: center; padding: 10px; border: 1px solid #ccc; border-radius: 8px;">
+                    <img src="Afbeeldingen/Sevenworlds.png" alt="Seven Worlds" height="200" width="200" style="display: block; margin: 0 auto;">
+                    <span style="display: block; color: #999; font-size: 20px; margin-top: 10px;">Seven Worlds</span>
+                </a>
+            </section>
+            <section>
+                <a href="Melody Paths/index.html" style="text-decoration: none; display: inline-block; text-align: center; padding: 10px; border: 1px solid #ccc; border-radius: 8px;">
+                    <img src="Afbeeldingen/Melody Path.png" alt="Melody Path" height="200" width="200" style="display: block; margin: 0 auto;">
+                    <span style="display: block; color: #999; font-size: 20px; margin-top: 10px;">Melody Paths</span>
+                </a>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
