--- a/Main index/eartraining/Tonal map/index.html
+++ b/Main index/eartraining/Tonal map/index.html
@@ -122,13 +122,13 @@
         <div id="links-container">
             <section>  
                 <a class="link" href="module 1.html">
-                   <img src="/Main index/eartraining/Afbeeldingen/TM Module 1.png" alt="Tonal Map">
+                   <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Afbeeldingen/TM Module 1.png" alt="Tonal Map">
                    <span>Module 1</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="module 2.html">
-                    <img src="/Main index/eartraining/Afbeeldingen/TM Module 2.png" alt="Tonal Map">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Afbeeldingen/TM Module 2.png" alt="Tonal Map">
                     <span>Module 2</span>
                 </a>
             </section>
