--- a/Main index/eartraining/Tonal map/index.html
+++ b/Main index/eartraining/Tonal map/index.html
@@ -15,11 +15,10 @@
         body {
             background-color: #ecf0f1;
             font-family: helvetica, arial, sans-serif;
-            font-size: 16px;
-            height: 100vh;
+            font-size: 18px;
             display: flex;
             flex-direction: column;
-            justify-content: flex-start; /* Content begint vanaf de bovenkant */
+            justify-content: flex-start;
             align-items: center;
             text-align: center;
             margin: 0;
@@ -42,67 +41,100 @@
         }
 
         nav a {
-            margin: 0 15px;
-            color: #3498db; /* Geen achtergrondkleur, alleen de tekst */
+            margin: 0 20px;
+            color: #3498db;
             text-decoration: none;
             font-size: 18px;
-            font-weight: 500; /* Minder opvallend dan bold */
+            font-weight: 600;
+            position: relative;
         }
 
-        nav a:hover {
-            text-decoration: underline; /* Lichte onderstreping bij hover */
+        nav a::after {
+            content: '';
+            display: block;
+            width: 0;
+            height: 2px;
+            background: #3498db;
+            transition: width 0.3s ease;
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+        }
+
+        nav a:hover::after {
+            width: 100%;
         }
 
         main {
-            margin-top: 10px;
+            max-width: 1200px;
+            width: 100%;
+            padding: 20px;
         }
 
         section h2 {
-            font-size: 32px;
+            font-size: 36px;
             margin-bottom: 30px;
             font-weight: bold;
             color: #2c3e50;
         }
 
-        #links-container {
+        #links-container, .module-links {
             display: flex;
             justify-content: center;
             gap: 40px;
-            margin-top: 20px;
+            margin-bottom: 40px;
             flex-wrap: wrap;
         }
 
         .link {
             text-decoration: none;
             color: #2c3e50;
+            width: 180px;
+            text-align: center;
         }
 
         .link img {
             display: block;
             margin: 0 auto;
-            border-radius: 10px;
-            height: 200px; /* Gelijkmatige hoogte voor de afbeeldingen */
-            width: 150px;
+            border-radius: 12px;
+            height: 220px;
+            width: 180px;
+            object-fit: cover;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .link:hover img {
+            transform: scale(1.05); /* Zoom effect bij hover */
         }
 
         .link span {
             display: block;
-            margin-top: 15px;
-            font-size: 18px;
+            margin-top: 10px;
+            font-size: 20px;
             color: #7f8c8d;
         }
 
-        .module-links a {
-            text-decoration: none;
-            color: #999;
-            font-size: 20px;
-            margin-top: 10px;
-            display: block;
-            text-align: center;
+        @media (max-width: 768px) {
+            .link {
+                width: 150px;
+            }
+
+            .link img {
+                height: 180px;
+                width: 150px;
+            }
         }
 
-        .module-links a:hover {
-            text-decoration: underline;
+        @media (max-width: 480px) {
+            .link {
+                width: 120px;
+            }
+
+            .link img {
+                height: 150px;
+                width: 120px;
+            }
         }
     </style>
 </head>
@@ -119,16 +151,17 @@
         <section>
             <h2>Sing The Numbers</h2>
         </section>
+
         <div id="links-container">
             <section>  
                 <a class="link" href="module 1.html">
-                   <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Afbeeldingen/TM Module 1.png" alt="Tonal Map">
+                   <img src="Afbeeldingen/TM Module 1.png" alt="Tonal Map">
                    <span>Module 1</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="module 2.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Afbeeldingen/TM Module 2.png" alt="Tonal Map">
+                    <img src="Afbeeldingen/TM Module 2.png" alt="Tonal Map">
                     <span>Module 2</span>
                 </a>
             </section>
@@ -136,13 +169,22 @@
 
         <div class="module-links">
             <section>
-                <a href="module 3.html">Module 3</a>
+                <a class="link" href="module 3.html">
+                    <img src="Afbeeldingen/TM Module 3.png">
+                    <span>Module 3</span>
+                </a>
             </section>
             <section>
-                <a href="module 4.html">Module 4</a>
+                <a class="link" href="module 4.html">
+                    <img src="Afbeeldingen/TM Module 4.png">
+                    <span>Module 4</span>
+                </a>
             </section>
             <section>
-                <a href="module 5.html">Module 5</a>
+                <a class="link" href="module 5.html">
+                    <img src="Afbeeldingen/TM Module 5.png">
+                    <span>Module 5</span>
+                </a>
             </section>
         </div>
     </main>
