--- a/Main index/eartraining/Tonal map/module 1.html
+++ b/Main index/eartraining/Tonal map/module 1.html
@@ -4,49 +4,150 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tonal Map Module 1</title>
-    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/index.css">
+
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            background-color: #ecf0f1;
+            font-family: helvetica, arial, sans-serif;
+            font-size: 16px;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            text-align: center;
+            margin: 0;
+        }
+
+        header {
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
+        header h1 {
+            font-size: 48px;
+            color: #3498db;
+            text-transform: uppercase;
+            margin-bottom: 20px;
+        }
+
+        nav {
+            margin-bottom: 40px;
+        }
+
+        nav a {
+            margin: 0 15px;
+            color: #3498db;
+            text-decoration: none;
+            font-size: 18px;
+            font-weight: 500;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        main {
+            max-width: 800px;
+            width: 100%;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        section h2 {
+            font-size: 32px;
+            margin-bottom: 30px;
+            font-weight: bold;
+            color: #2c3e50;
+        }
+
+        .lesson-block {
+            padding: 20px;
+            margin-bottom: 30px;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+        }
+
+        .lesson-block p {
+            font-size: 18px;
+            color: #2c3e50;
+            margin-bottom: 20px;
+        }
+
+        .lesson-block audio {
+            display: block;
+            margin: 0 auto;
+        }
+
+        /* Zachte kleuren voor elk lesblok */
+        .lesson-block:nth-child(1) {
+            background-color: #f0f9ff; /* Zachte blauw */
+        }
+
+        .lesson-block:nth-child(2) {
+            background-color: #e8fce9; /* Zachte groen */
+        }
+
+        .lesson-block:nth-child(3) {
+            background-color: #fff4e6; /* Zachte oranje */
+        }
+
+        .lesson-block:nth-child(4) {
+            background-color: #fde2e4; /* Zachte roze */
+        }
+
+        .lesson-block:nth-child(5) {
+            background-color: #f3e8fd; /* Zachte paars */
+        }
+
+    </style>
 </head>
 <body>
-    <Header>
+    <header>
         <h1>TONAL MAP</h1>
         <nav>
-                <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
-                <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
-                <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
+            <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
+            <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
+            <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
-    </Header>
+    </header>
     <main>
         <section id='steezy'>
-
             <h2>Module 1</h2>
         </section>
 
+        <div class="lesson-block">
+            <p>Les 1. Beheers de noten 1, 2, 3: zing de eerste 3 noten na van de tonale kaart.</p>
+            <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn_1_1.mp3"></audio>
+        </div>
 
-            <p>
-                Les 1. Beheers de noten 1, 2, 3: zing de eerste 3 noten na van de tonale kaart. 
-            </p>
-                <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn_1_1.mp3"></audio>
-                <p>
-                Les 2. Beheers de noten 1, 2, 3: nu maken we een melodische verbinding. Beginner
-                
-            </p>
+        <div class="lesson-block">
+            <p>Les 2. Beheers de noten 1, 2, 3: nu maken we een melodische verbinding. Beginner</p>
             <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_2.mp3"></audio>
-        
+        </div>
 
-            <p>
-                Les 3. Beheers de noten 1, 2, 3: we maken  een melodische verbinding. Gevorderd
-            </p>
+        <div class="lesson-block">
+            <p>Les 3. Beheers de noten 1, 2, 3: we maken een melodische verbinding. Gevorderd</p>
             <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_3.mp3"></audio>
-            <p>
-                Les 4. Beheers de noten 1, 3, 4: we maken een melodische verbinding.
-            </p>
+        </div>
+
+        <div class="lesson-block">
+            <p>Les 4. Beheers de noten 1, 3, 4: we maken een melodische verbinding.</p>
             <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_4.mp3"></audio>
+        </div>
 
-            <p>
-                Les 5. Beheers de noten 1, 2, 3 en 4: we  maken een melodische verbinding.
-            </p>
+        <div class="lesson-block">
+            <p>Les 5. Beheers de noten 1, 2, 3 en 4: we maken een melodische verbinding.</p>
             <audio controls controlslist="nodownload" src="Audio/Module 1/IFR_Stn1_5.mp3"></audio>
-
-        </main>
+        </div>
+    </main>
 </body>
 </html>
