--- a/Main index/Blues Training/index.html
+++ b/Main index/Blues Training/index.html
@@ -47,7 +47,7 @@
             </section>
         </div>
         
-        <section>
+        <section id="Tekst">
 
             
             <h3>
