--- a/Main index/eartraining/Tonal map/index.html
+++ b/Main index/eartraining/Tonal map/index.html
@@ -176,13 +176,13 @@
             </section>
             <section>
                 <a class="link" href="module 4.html">
-                    <img src="Afbeeldingen/TM Module 4.png">
+                    <img src="Afbeeldingen/Tm Module 4.png">
                     <span>Module 4</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="module 5.html">
-                    <img src="Afbeeldingen/TM Module 5.png">
+                    <img src="Afbeeldingen/Tm Module 5.png">
                     <span>Module 5</span>
                 </a>
             </section>
