--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -25,7 +25,7 @@
             <section>
                 <a class="link" href="Tonal map/index.html">
                     <img src="Afbeeldingen/Eartraining.png" alt="Tonal Map" height="200" width="200">
-                    <span>Tonal mapS</span>
+                    <span>Tonal map</span>
                 </a>
             </section>
             <section>
