--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -41,6 +41,24 @@
                 </a>
             </section>
         </div>
-    </main>
+            <section>
+                <h2>Feel The Numbers</h2>
+            </section>
+            <div id="links-container">
+
+                <section>
+                    <a class="link" href="">
+                        <img src="Afbeeldingen/FTN.webp" alt="Seven Worlds" height="200" width="200">
+                        <span>Feel the numbers</span>
+                    </a>
+                </section>
+                <section>
+                    <a class="link" href="">
+                        <img src="Afbeeldingen/FTC.webp" alt="Melody Path" height="200" width="200">
+                        <span>Feel the chords</span>
+                    </a>
+                </section>
+            </div>
+            </main>
 </body>
 </html>
