--- a/Theory/Drieklanken.html
+++ b/Theory/Drieklanken.html
@@ -190,6 +190,7 @@
         Dmin<br>
         D-
     </p>
+    <iframe src="https://thomastooten.github.io/JPRSite/Main%20index/eartraining/index.html" frameborder="0"></iframe>
 </main>
 </body>
 </html>
