--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <nav>
             <a href="Main index/eartraining/index.html">Ear Training</a>
             <a href="Main index/Blues Training/index.html">Blues Training</a>
+            <a href="">Cursus</a>
             <a href="https://integerbook.herokuapp.com">Leadsheets IFR</a>
         </nav>
     </header>
