--- a/Main index/eartraining/Feel The numbers/M8.html
+++ b/Main index/eartraining/Feel The numbers/M8.html
@@ -181,23 +181,19 @@
     </header>
     <main>
         <section id='steezy'>
-            <h2>Module 1</h2>
+            <h2>Module 8</h2>
         </section>
 
         <div class="lesson-block">
-            <p></p>
-            <audio controls controlslist="nodownload" src="Audio/Ear_Training_for_Musical_Creativity_Module_1/Feel the Numbers 1 - track 01.mp3"></audio>
+            <p>meditative - notes 5, 6, 7, 1</p>
+            <audio controls controlslist="nodownload" src="Audio/Ear_Training_for_Musical_Creativity_Module_8/Feel the Numbers 1 - track 18 (meditative - notes 5, 6, 7, 1,).mp3"></audio>
         </div>
 
         <div class="lesson-block">
-            <p></p>
-            <audio controls controlslist="nodownload" src="Audio/Ear_Training_for_Musical_Creativity_Module_1/Feel the Numbers 1 - track 02.mp3"></audio>
+            <p>songlike - notes 5, 6, 7, 1,</p>
+            <audio controls controlslist="nodownload" src="Audio/Ear_Training_for_Musical_Creativity_Module_8/Feel the Numbers 1 - track 19 (songlike - notes 5, 6, 7, 1,).mp3"></audio>
         </div>
 
-        <div class="lesson-block">
-            <p></p>
-            <audio controls controlslist="nodownload" src="Audio/Ear_Training_for_Musical_Creativity_Module_1/Feel the Numbers 1 - track 03.mp3"></audio>
-        </div>
 
     </main>
 </body>
