--- a/Main index/eartraining/Feel The numbers/index.html
+++ b/Main index/eartraining/Feel The numbers/index.html
@@ -21,62 +21,62 @@
         </section>
         <div id="links-container">
             <section>
-            <a class="link" href="Lessen 1 tem 4.html">
+            <a class="link" href="M1.html">
                 <img src="Afbeeldingen/M1.webp">
                 <span>Module 1</span>
             </a>
             </section>
             <section>
-                <a class="link" href="Lessen 5 tem 8.html">
+                <a class="link" href="M2.html">
                     <img src="Afbeeldingen/M2.webp">
                     <span>Module 2</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="Lessen 5 tem 8.html">
+                <a class="link" href="M3.html">
                     <img src="Afbeeldingen/M3.webp">
                     <span>Module 3</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="Lessen 5 tem 8.html">
+                <a class="link" href="M4.html">
                     <img src="Afbeeldingen/M4.webp">
                     <span>Module 4</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="Lessen 5 tem 8.html">
+                <a class="link" href="M5.html">
                     <img src="Afbeeldingen/M5.webp">
                     <span>Module 5</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="Lessen 5 tem 8.html">
+                <a class="link" href="M6.html">
                     <img src="Afbeeldingen/M6.webp">
                     <span>Module 6</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="Lessen 5 tem 8.html">
+                <a class="link" href="M7.html">
                     <img src="Afbeeldingen/M7.webp">
                     <span>Module 7</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="Lessen 5 tem 8.html">
+                <a class="link" href="M8.html">
                     <img src="Afbeeldingen/M8.webp">
                     <span>Module 8</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="Lessen 5 tem 8.html">
-                    <img src="Afbeeldingen/image22.webp">
+                <a class="link" href="M9.html">
+                    <img src="Afbeeldingen/M9.webp">
                     <span>Module 9</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="Lessen 5 tem 8.html">
-                    <img src="Afbeeldingen/image22.webp">
+                <a class="link" href="M10.html">
+                    <img src="Afbeeldingen/10.webp">
                     <span>Module 10</span>
                 </a>
             </section>
