--- a/Main index/eartraining/Feel the Chords/M2.html
+++ b/Main index/eartraining/Feel the Chords/M2.html
@@ -181,18 +181,20 @@
     </header>
     <main>
         <section id='steezy'>
-            <h2>Module 9</h2>
+            <h2>Module 2</h2>
         </section>
 
         <div class="lesson-block">
-            <p>notes 5, 6, 7, 1, 2, 3</p>
-            <audio controls controlslist="nodownload" src="Audio/Ear_Training_for_Musical_Creativity_Module_9/Feel the Numbers 1 - track 20 (notes 5, 6, 7, 1, 2, 3).mp3"></audio>
+            <p>Studying chords 1 and 5</p>
+            <audio controls controlslist="nodownload" src="audio/Recognizing_Chords_by_Ear_Module_02/Lesson 2 - Studying chords 1 and 5.mp4"></audio>
         </div>
 
         <div class="lesson-block">
-            <p>notes 5, 6, 7, 1, 2, 3</p>
-            <audio controls controlslist="nodownload" src="Audio/Ear_Training_for_Musical_Creativity_Module_9/Feel the Numbers 1 - track 21 (notes 5, 6, 7, 1, 2, 3).mp3"></audio>
+            <p>Dance the Night Away</p>
+            <audio controls controlslist="nodownload" src="audio/Recognizing_Chords_by_Ear_Module_02/Song analysis - Dance the Night Away.mp4"></audio>
         </div>
+
+
 
     </main>
 </body>
