--- a/Main index/eartraining/Feel the Chords/M1.html
+++ b/Main index/eartraining/Feel the Chords/M1.html
@@ -181,17 +181,17 @@
     </header>
     <main>
         <section id='steezy'>
-            <h2>Module 9</h2>
+            <h2>Module 1</h2>
         </section>
 
         <div class="lesson-block">
-            <p>notes 5, 6, 7, 1, 2, 3</p>
-            <audio controls controlslist="nodownload" src="Audio/Ear_Training_for_Musical_Creativity_Module_9/Feel the Numbers 1 - track 20 (notes 5, 6, 7, 1, 2, 3).mp3"></audio>
+            <p>Studying chords 1 and 4</p>
+            <audio controls controlslist="nodownload" src="audio/Recognizing_Chords_by_Ear_Module_01/Lesson 1 - Studying chords 1 and 4.mp4"></audio>
         </div>
 
         <div class="lesson-block">
-            <p>notes 5, 6, 7, 1, 2, 3</p>
-            <audio controls controlslist="nodownload" src="Audio/Ear_Training_for_Musical_Creativity_Module_9/Feel the Numbers 1 - track 21 (notes 5, 6, 7, 1, 2, 3).mp3"></audio>
+            <p>Walk on the Wild Side</p>
+            <audio controls controlslist="nodownload" src="audio/Recognizing_Chords_by_Ear_Module_01/Song analysis - Walk on the Wild Side.mp4"></audio>
         </div>
 
     </main>
