--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -46,7 +46,7 @@
             </section>
             <div id="links-container">
                 <section>
-                    <a class="link" href="">
+                    <a class="link" href="Feel The numbers/index.html">
                         <img src="Afbeeldingen/FTN.webp" alt="Seven Worlds" height="200" width="200">
                         <span>Feel the numbers</span>
                     </a>
